[package]
name = "systembus-notifier"
version = "0.1.2"
authors = ["Elvyria <elvyria@tutanota.com>"]
description = "system dbus notification redirector"
repository = "https://github.com/Elvyria/systembus-notifier"
license = "MIT"
edition = "2021"

[dependencies]
dbus = "0.9.6"
syslog = "6.0.1"
log = "0.4.17"

[dependencies.clap]
version = "3.2.16"
features = ["derive"]

[dependencies.nix]
version = "0.24.2"
features = ["user"]
